# dconf-application-example

Python_Example/: CounterPython.py  org.example.counter-python.gschema.xml
Python_Example/python-application-admx/: python_example.admx
Python_Example/python-application-admx/ru-RU/: python_example.adml
Qt_Example/: qt_example.ini
Qt_Example/CounterExample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_Example/qt-application-admx/: qt_example.admx
Qt_Example/qt-application-admx/ru-RU/: qt_example.adml
Vala_Example/: CounterVala.vala  README.txt  org.example.counter-vala.gschema.xml  style.css
Vala_Example/vala-application-admx/: vala_example.admx
Vala_Example/vala-application-admx/ru-RU/: vala_example.adml
